# portage-types

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .project.jsonnet  .wiswa.jsonnet  .yarnrc.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  package.json  pyproject.toml  setup.py
.github/workflows/: qa.yml  tests.yml
docs/: conf.py  index.rst
portage-stubs/: METADATA.toml  __init__.pyi  versions.pyi
portage-stubs/dbapi/: __init__.pyi  porttree.pyi
portage-stubs/package/ebuild/: config.pyi  doebuild.pyi
typings/: portage
